--- a/soft-ui-dashboard-react-main/public/manifest.json
+++ b/soft-ui-dashboard-react-main/public/manifest.json
@@ -1,15 +1,15 @@
 {
-  "short_name": "Soft UI Dashboard",
-  "name": "Soft UI Dashboard React",
+  "short_name": "Planify",
+  "name": "Planify",
   "icons": [
     {
-      "src": "favicon.png",
+      "src": "Icon.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/png"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#17c1e8",
+  "theme_color": "#101d54",
   "background_color": "#ffffff"
 }
